--- a/static_in_env/css/style.css
+++ b/static_in_env/css/style.css
@@ -97,7 +97,7 @@ ul, ol {
   border: none;
   border-radius: 0;
   color: #FFF;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-weight: 700;
   text-align: center;
   -webkit-transition: 0.2s all;
@@ -304,7 +304,7 @@ textarea.input {
 
 .section-title .title {
   display: inline-block;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   margin: 0px;
 }
 
@@ -369,7 +369,7 @@ textarea.input {
   margin-top: 0px;
   margin-bottom: 0px;
   margin-right: 15px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 #breadcrumb .breadcrumb-tree {
@@ -380,7 +380,7 @@ textarea.input {
   display: inline-block;
   font-size: 12px;
   font-weight: 500;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   color: #8D99AE;
 }
 
@@ -822,7 +822,7 @@ textarea.input {
 
 .shop .shop-body .cta-btn {
   color: #FFF;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 /*=========================================================
@@ -869,18 +869,19 @@ textarea.input {
 
 .hot-deal .hot-deal-countdown>li>div h3 {
   color: #FFF;
+  font-size: 16px;
   margin-bottom: 0px;
 }
 
 .hot-deal .hot-deal-countdown>li>div span {
   display: block;
-  font-size: 10px;
-  text-transform: uppercase;
+  font-size: 15px;
+  /* text-transform: uppercase; */
   color: #FFF;
 }
 
 .hot-deal p {
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 24px;
 }
 
@@ -950,14 +951,14 @@ textarea.input {
 
 .product .product-img .product-label {
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 10px;
+  right: 10px;
 }
 
 .product .product-img .product-label>span {
   border: none; /* Remove the border property */
   padding: 2px 10px;
-  font-size: 9px;
+  font-size: 12px;
 }
 
 
@@ -975,25 +976,25 @@ textarea.input {
 
 .product .product-body {
   position: relative;
-  padding: 15px;
+  padding: 5px;
   background-color: #FFF;
   text-align: center;
   z-index: 20;
 }
 
 .product .product-body .product-category {
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 12px;
   color: #8D99AE;
 }
 
 .product .product-body .product-name {
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 14px;
 }
 
 .product .product-body .product-name>a {
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .product .product-body .product-name>a:hover, .product .product-body .product-name>a:focus {
@@ -1002,20 +1003,21 @@ textarea.input {
 
 .product .product-body .product-price {
   color: #008080;
-  font-size: 18px;
+  font-size: 13px;
 }
 
 
 .product .product-body .product-old-price {
-  font-size: 70%;
+  font-size: 13px;
   font-weight: 400;
   color: #8D99AE;
 }
 
 .product .product-body .product-rating {
   position: relative;
-  margin: 15px 0px 10px;
-  height: 20px;
+  /* margin: 15px 0px 10px; */
+  font-size: 12px;
+  /* height: 20px; */
 }
 
 .product .product-body .product-rating>i {
@@ -1124,7 +1126,7 @@ textarea.input {
   /* margin-top: 60px; */
   background-color: Coral;
   color: #FFF;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-weight: 700;
   border-radius: 0;
   /* -webkit-transition: 0.2s all;
@@ -1185,13 +1187,13 @@ textarea.input {
 }
 
 .product-widget .product-body .product-category {
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 10px;
   color: #8D99AE;
 }
 
 .product-widget .product-body .product-name {
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 12px;
 }
 
@@ -1297,7 +1299,7 @@ textarea.input {
 }
 
 .aside>.aside-title {
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 18px;
   margin: 15px 0px 30px;
 }
@@ -1377,7 +1379,7 @@ textarea.input {
 .store-sort label {
   font-weight: 500;
   font-size: 12px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   margin-right: 15px;
 }
 
@@ -1461,7 +1463,7 @@ textarea.input {
 .store-qty {
   margin-right: 30px;
   font-weight: 500;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 12px;
 }
 
@@ -1548,7 +1550,7 @@ textarea.input {
 \*----------------------------*/
 
 .product-details .product-name {
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 18px;
 }
 
@@ -1599,7 +1601,7 @@ textarea.input {
 .product-details .product-options label {
   font-weight: 500;
   font-size: 12px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   margin-right: 15px;
   margin-bottom: 0px;
 }
@@ -1682,7 +1684,7 @@ textarea.input {
 
 .product-details .product-btns li {
   display: inline-block;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 12px;
 }
 
@@ -1696,7 +1698,7 @@ textarea.input {
 
 .product-details .product-links li {
   display: inline-block;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 12px;
 }
 
@@ -2178,7 +2180,7 @@ textarea.input {
 .login .signin .content h2 {
   font-size: 2em;
   color: #008080;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 .login .signin .content .form {
@@ -2291,7 +2293,7 @@ input[type="submit"]:active {
 }
 
 #bottom-footer {
-  background: black;
+  background: #008080;
   color: #ffffff;
 }
 
@@ -2301,7 +2303,7 @@ input[type="submit"]:active {
 
 .footer .footer-title {
   color: black;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 18px;
   /* margin: 0px 0px 30px; */
 }
@@ -2346,7 +2348,7 @@ input[type="submit"]:active {
 }
 
 .footer-payments li a {
-  color: #FF7F50;
+  color: white;
   font-size: 36px;
   display: block;
 }
