--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -4,217 +4,153 @@
 {% include 'store/header.html' %} {% include 'store/navigation.html' %}
 
 <div class="cart">
-	<section class="h-100 gradient-custom">
-		<div class="container py-5">
-			<div class="row d-flex justify-content-center my-4">
-				<div class="col-md-8">
-					<div class="card mb-4">
-						<div class="card-header py-3">
-							<h5 class="mb-0">Cart - {{ cart_items|length }} item(s)</h5>
+	<section class="h-100" style="background-color: #eee;">
+		<div class="container-flow h-100">
+		  <div class="row d-flex justify-content-center align-items-center h-100">
+			<div class="col">
+			  <div class="card">
+				<div class="card-body p-4">
+	  
+				  <div class="row">
+	  
+					<div class="col-lg-7">
+					  <h5 class="mb-3"><a href="#!" class="text-body"><i
+							class="fas fa-long-arrow-alt-left me-2"></i>Continue shopping</a></h5>
+					  <hr>
+	  
+					  <div class="d-flex justify-content-between align-items-center mb-4">
+						<div>
+						  <p class="mb-1">Shopping cart</p>
+						  <p class="mb-0">You have {{ cart_items_count }} items in your cart</p>
 						</div>
-						<div class="card-body">
-							{% for cart_item in cart_items %}
-							<!-- Single item -->
-							<div class="row my-5">
-								<div class="col-lg-3 col-md-3 mb-4 mb-lg-0">
-									<!-- Image -->
-									<div class="bg-image hover-overlay hover-zoom ripple rounded"
-										data-mdb-ripple-color="light">
-										<img src="{{ cart_item.product.images.first.image.url }}"
-											class="w-100" alt="{{ cart_item.product.name }}" />
-										<a href="#!">
-											<div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
-										</a>
-									</div>
-									<!-- Image -->
-								</div>
-	
-								<div class="col-lg-5 col-md-4 mb-4 mb-lg-0">
-									<!-- Data -->
-									<p><a href="{{ cart_item.product.get_absolute_url }}"><strong>{{ cart_item.product.name }}</strong></a></p>
-									{% for category in cart_item.product.categories.all %}
-									<p>Category: {{ category.name }}</p>
-									{% endfor %}
-									{% comment %} <p>Size: {{ cart_item.product.size }}</p> {% endcomment %}
-									<form method="post">
-										{% csrf_token %}
-										<input type="hidden" name="item_id" value="{{ cart_item.id }}" />
-										<button type="submit" style="background:#008080; "
-											class="btn text-white btn-sm me-1 mb-2" data-mdb-toggle="tooltip"
-											title="Remove item">
-											<i class="fas fa-trash"></i>
-										</button>
-										<button type="button" style="background:Coral;"
-											class="btn text-white btn-sm mb-2" data-mdb-toggle="tooltip"
-											title="Move to the wish list">
-											<i class="fas fa-heart"></i>
-										</button>
-									</form>
-									<!-- Data -->
-								</div>
-	
-								<div class="col-lg-4 col-md-4 mb-4 mb-lg-0">
-									<!-- Quantity -->
-									<div class="d-flex mb-4" style="max-width: 300px">
-										<button style="background:#008080; " class="btn text-white px-3 me-2"
-											onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-											<i class="fas fa-minus"></i>
-										</button>
-	
-										<div class="form-outline">
-											<input id="form1" min="0" name="quantity" value="{{ cart_item.quantity }}"
-												type="number" class="form-control" />
-											<!-- <label class="form-label" for="form1">Quantity</label> -->
-										</div>
-	
-										<button style="background:#008080; " class="btn text-white px-3 ms-2"
-											onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-											<i class="fas fa-plus"></i>
-										</button>
-									</div>
-									<!-- Quantity -->
-	
-									<!-- Price -->
-									<p class="text-start text-md-center">
-										<strong>${{ cart_item.product.price }}</strong>
-									</p>
-									<!-- Price -->
-								</div>
-							</div>
-							<!-- Single item -->
-							{% endfor %}
-	
-							<hr class="my-4" />
-	
-							<div class="card mb-4">
-								<div class="card-body">
-									<p><strong>Expected shipping delivery</strong></p>
-									<p class="mb-0">12.10.2020 - 14.10.2020</p>
-								</div>
-							</div>
-							<div class="card mb-4 mb-lg-0">
-								<div class="card-body">
-									<p><strong>We accept</strong></p>
-									<img class="me-2" width="45px"
-										src="https://mdbcdn.b-cdn.net/wp-content/plugins/woocommerce-gateway-stripe/assets/images/visa.svg"
-										alt="Visa" />
-									<img class="me-2" width="45px"
-										src="https://mdbcdn.b-cdn.net/wp-content/plugins/woocommerce-gateway-stripe/assets/images/amex.svg"
-										alt="American Express" />
-									<img class="me-2" width="45px"
-										src="https://mdbcdn.b-cdn.net/wp-content/plugins/woocommerce-gateway-stripe/assets/images/mastercard.svg"
-										alt="Mastercard" />
-									<img class="me-2" width="45px"
-										src="https://www.paypalobjects.com/digitalassets/c/website/marketing/apac/C2/logos-buttons/optimize/Online_Primary_Acceptance_Mark_RGB_V2_medium.jpg"
-										alt="PayPal acceptance mark" />
-								</div>
-							</div>
+						<div>
+						  <p class="mb-0"><span class="text-muted">Sort by:</span> <a href="#!"
+							  class="text-body">price <i class="fas fa-angle-down mt-1"></i></a></p>
 						</div>
+					  </div>
+	  
+					  <form method="post">
+						{% csrf_token %}
+						{% for cart_item in cart_items %}
+						<div class="card mb-3">
+						  <div class="card-body">
+							<div class="d-flex justify-content-between">
+							  <div class="d-flex flex-row align-items-center">
+								<div>
+								  <img src="{{ cart_item.product.images.first.image.url }}"
+									class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
+								</div>
+								<div class="ms-3">
+								  <h5>{{ cart_item.product.name }}</h5>
+								  <p class="small mb-0">{{ cart_item.product.details }}</p>
+								</div>
+							  </div>
+							  <div class="d-flex flex-row align-items-center">
+								<div style="width: 50px;">
+								  <h5 class="fw-normal mb-0">{{ cart_item.quantity }}</h5>
+								</div>
+								<div style="width: 80px;">
+								  <h5 class="mb-0">${{ cart_item.product.discount_price }}</h5>
+								</div>
+								<input type="hidden" name="item_id" value="{{ cart_item.id }}" />
+								<button type="submit" class="btn btn-link text-muted"><i class="fas fa-trash-alt"></i></button>
+							  </div>
+							</div>
+						  </div>
+						</div>
+						{% endfor %}
+					  </form>
+	  
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card mb-4">
-						<div class="card-header py-3">
-							<h5 class="mb-0">Summary</h5>
-						</div>
+					<div class="col-lg-5">
+	  
+					  <div style="background:#008080;" class="card text-white rounded-3">
 						<div class="card-body">
-							<ul class="list-group list-group-flush">
-								<li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-									Products
-									<span>${{ total_price }}</span>
-								</li>
-								<li class="list-group-item d-flex justify-content-between align-items-center px-0">
-									Shipping
-									<span>Gratis</span>
-								</li>
-								<li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-									<div>
-										<strong>Total amount</strong>
-										<strong>
-											<p class="mb-0">(including VAT)</p>
-										</strong>
-									</div>
-									<span><strong>${{ total_price }}</strong></span>
-								</li>
-							</ul>
-	
-							{% comment %} <a href="{% url 'checkout' %}" {% endcomment %}
-							<a href=""
-								style="background:#008080;" class="btn text-white btn-lg btn-block">
-								Go to checkout
-							</a>
+						  <div class="d-flex justify-content-between align-items-center mb-4">
+							<h5 class="mb-0 text-white">Card details</h5>
+							<img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-6.webp"
+							  class="img-fluid rounded-3" style="width: 45px;" alt="Avatar">
+						  </div>
+	  
+						  <p class="small mb-2">Card type</p>
+						  <a href="#!" type="submit" class="text-white"><i
+							  class="fab fa-cc-mastercard fa-2x me-2"></i></a>
+						  <a href="#!" type="submit" class="text-white"><i
+							  class="fab fa-cc-visa fa-2x me-2"></i></a>
+						  <a href="#!" type="submit" class="text-white"><i
+							  class="fab fa-cc-amex fa-2x me-2"></i></a>
+						  <a href="#!" type="submit" class="text-white"><i class="fab fa-cc-paypal fa-2x"></i></a>
+	  
+						  <form class="mt-4">
+							<div class="form-outline form-white mb-4">
+							  <input type="text" id="typeName" class="form-control form-control-lg" siez="17"
+								placeholder="Cardholder's Name" />
+							  <label class="form-label" for="typeName">Cardholder's Name</label>
+							</div>
+	  
+							<div class="form-outline form-white mb-4">
+							  <input type="text" id="typeText" class="form-control form-control-lg" siez="17"
+								placeholder="1234 5678 9012 3457" minlength="19" maxlength="19" />
+							  <label class="form-label" for="typeText">Card Number</label>
+							</div>
+	  
+							<div class="row mb-4">
+							  <div class="col-md-6">
+								<div class="form-outline form-white">
+								  <input type="text" id="typeExp" class="form-control form-control-lg"
+									placeholder="MM/YYYY" size="7" id="exp" minlength="7" maxlength="7" />
+								  <label class="form-label" for="typeExp">Expiration</label>
+								</div>
+							  </div>
+							  <div class="col-md-6">
+								<div class="form-outline form-white">
+								  <input type="password" id="typeText" class="form-control form-control-lg"
+									placeholder="&#9679;&#9679;&#9679;" size="1" minlength="3" maxlength="3" />
+								  <label class="form-label" for="typeText">Cvv</label>
+								</div>
+							  </div>
+							</div>
+	  
+						  </form>
+	  
+						  <hr class="my-4">
+	  
+						  <div class="d-flex justify-content-between">
+							<p class="mb-2">Subtotal</p>
+							<p class="mb-2">${{ total_price }}</p>
+						  </div>
+	  
+						  <div class="d-flex justify-content-between">
+							<p class="mb-2">Shipping</p>
+							<p class="mb-2">$0</p>
+						  </div>
+	  
+						  <div class="d-flex justify-content-between mb-4">
+							<p class="mb-2">Total(Incl. taxes)</p>
+							<p class="mb-2">${{ total_price }}</p>
+						  </div>
+	  
+						  <button type="button" style="background: Coral;" class="btn btn-block btn-lg">
+							<div class="d-flex justify-content-between">
+							  <span>${{ total_price }}</span>
+							  <span>Checkout <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
+							</div>
+						  </button>
+	  
 						</div>
+					  </div>
+	  
 					</div>
+	  
+				  </div>
+	  
 				</div>
+			  </div>
 			</div>
+		  </div>
 		</div>
-	</section>
-	
-  {% comment %}
-  <div class="cart-list">
-    {% for cart_item in cart_items %}
-    <div class="product-widget">
-      <div class="product-info">
-        <div class="product-img">
-          {% if cart_item.product.images.exists %}
-          <img
-            src="{{ cart_item.product.images.first.image.url }}"
-            alt="{{ cart_item.product.name }}"
-          />
-          {% endif %}
-        </div>
-        <div class="product-body">
-          <h3 class="product-name">
-            <a href="{{ cart_item.product.get_absolute_url }}"
-              >{{ cart_item.product.name }}</a
-            >
-          </h3>
-          <h4 class="product-price">
-            <span class="qty">{{ cart_item.quantity }}x</span>
-            {% if cart_item.product.discount %} &#8358;{{
-            cart_item.product.discount_price|intcomma }} {% else %} &#8358;{{
-            cart_item.product.price|intcomma }} {% endif %}
-          </h4>
-        </div>
-      </div>
-      <div class="cart-actions">
-        <form method="post">
-          {% csrf_token %}
-          <input type="hidden" name="item_id" value="{{ cart_item.id }}" />
-          <div class="qty-label">
-            Qty
-            <div class="input-number">
-              <input
-                name="quantity"
-                value="{{ cart_item.quantity }}"
-                type="number"
-              />
-              <span class="qty-up">+</span>
-              <span class="qty-down">-</span>
-            </div>
-          </div>
-          <button type="submit" class="remove-from-cart-btn">
-            <i class="fa fa-close"></i> Remove
-          </button>
-        </form>
-      </div>
-    </div>
-
-    {% endfor %}
-	<div class="cart-summary">
-            <small>{{ cart_items_count }} Item(s) selected</small>
-            <h5>SUBTOTAL: &#8358;{{ total_price|intcomma }}</h5>
-          </div>
-          <div class="cart-btns">
-            <a href="{% url 'cart' %}">View Cart</a>
-            <a href="/">Checkout <i class="fa fa-arrow-circle-right"></i></a>
-            {% comment %}
-            <a href="{% url 'checkout' %}"
-              >Checkout <i class="fa fa-arrow-circle-right"></i
-            ></a>
-		</div>
-  </div>
-  {% endcomment %}
+	  </section>
 </div>
+{% include 'store/newsletter.html' %}
 
 {% include 'store/footer.html' %} {% endblock content %}
