--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -8,13 +8,13 @@
 		<div class="container-flow h-100">
 		  <div class="row d-flex justify-content-center align-items-center h-100">
 			<div class="col">
-			  <div class="card">
+			  <div class="card shadow-0">
 				<div class="card-body p-4">
 	  
 				  <div class="row">
 	  
 					<div class="col-lg-7">
-					  <h5 class="mb-3"><a href="#!" class="text-body"><i
+					  <h5 class="mb-3"><a href="{% url 'product_list' %}" class="text-body"><i
 							class="fas fa-long-arrow-alt-left me-2"></i>Continue shopping</a></h5>
 					  <hr>
 	  
