--- a/store/templates/store/head.html
+++ b/store/templates/store/head.html
@@ -1,58 +1,96 @@
 {% load static %}
+{% load compress %}
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Kenstech Support</title>
+  <title>Kenstech Support</title>
+  <!-- Font Awesome -->
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    rel="stylesheet"
+  />
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    rel="stylesheet"
+  />
+  <!-- MDB -->
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
+    rel="stylesheet"
+  />
 
-    <!-- Font Awesome -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
+
+  <link
+  href="//db.onlinewebfonts.com/c/d162a260eb6b9b288f54503ee22aa9ff?family=Quincy+CF"
+  rel="stylesheet"
+  type="text/css"
+/>
+
 <link
-href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
 rel="stylesheet"
 />
-<!-- Google Fonts -->
-<link
-href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-rel="stylesheet"
-/>
-<!-- MDB -->
-<link
-href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css"
-rel="stylesheet"
-/>
 
-    {% comment %} <!-- Google font -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet"> {% endcomment %}
-    <link href="//db.onlinewebfonts.com/c/d162a260eb6b9b288f54503ee22aa9ff?family=Quincy+CF" rel="stylesheet" type="text/css"/>
-    <!-- Bootstrap -->
-    <link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
+  {% compress css %}
+  
+  {% comment %}
+  <!-- Google font -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700"
+    rel="stylesheet"
+  />
+  {% endcomment %}
 
-    <!-- Slick -->
-    <link type="text/css" rel="stylesheet" href="{% static 'css/slick.css' %} "/>
-    <link type="text/css" rel="stylesheet" href="{% static 'css/slick-theme.css' %}"/>
+  <!-- Bootstrap -->
+  <link
+    type="text/css"
+    rel="stylesheet"
+    href="{% static 'css/bootstrap.min.css' %}?v={{ STATIC_VERSION }}"
+  />
+ 
 
-    <!-- nouislider -->
-    <link type="text/css" rel="stylesheet" href="{% static 'css/nouislider.min.css' %}"/>
+  <!-- Slick -->
+  <link type="text/css" rel="stylesheet" href="{% static 'css/slick.css' %}?v={{ STATIC_VERSION }} " />
+  <link
+    type="text/css"
+    rel="stylesheet"
+    href="{% static 'css/slick-theme.css' %}?v={{ STATIC_VERSION }}"
+  />
 
-    <!-- Font Awesome Icon -->
-    {% comment %} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" /> {% endcomment %}
+  <!-- nouislider -->
+  <link
+    type="text/css"
+    rel="stylesheet"
+    href="{% static 'css/nouislider.min.css' %}?v={{ STATIC_VERSION }}"
+  />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Font Awesome Icon -->
+  {% comment %}
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  />
+  {% endcomment %}
 
+  <!-- Custom stlylesheet -->
+  <link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}?v={{ STATIC_VERSION }}" />
 
-    <!-- Custom stlylesheet -->
-    <link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}"/>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <link rel="icon" type="image/x-icon" href="{% static 'img/logo2.png' %}">
-
+  <link rel="icon" type="image/x-icon" href="{% static 'img/logo2.png' %}" />
+  {% endcompress %}
 </head>
