--- a/store/templates/store/script.html
+++ b/store/templates/store/script.html
@@ -1,79 +1,14 @@
 {% load static %}
+{% load compress %}
 
-<script>
-
-  document.addEventListener('DOMContentLoaded', function() {
-    var products = document.querySelectorAll('.product');
-  
-    function isElementInViewport(el) {
-      var rect = el.getBoundingClientRect();
-      return (
-        rect.top >= 0 &&
-        rect.left >= 0 &&
-        rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-        rect.right <= (window.innerWidth || document.documentElement.clientWidth)
-      );
-    }
-  
-    function handleScroll() {
-      for (var i = 0; i < products.length; i++) {
-        if (isElementInViewport(products[i])) {
-          products[i].classList.add('bounce');
-        }
-      }
-    }
-  
-    window.addEventListener('scroll', handleScroll);
-  });
-
-
-  
-</script>  
-
-<script>
-    // Get the HTML elements for countdown values
-    const daysElement = document.getElementById('days');
-    const hoursElement = document.getElementById('hours');
-    const minutesElement = document.getElementById('minutes');
-    const secondsElement = document.getElementById('seconds');
-  
-    // Set the target date and time for the countdown
-    const targetDate = new Date('2023-12-31T23:59:59');
-  
-    // Function to update the countdown values
-    function updateCountdown() {
-      const currentDate = new Date();
-      const remainingTime = targetDate - currentDate;
-  
-      // Calculate the days, hours, minutes, and seconds
-      const days = Math.floor(remainingTime / (1000 * 60 * 60 * 60 * 24));
-      const hours = Math.floor((remainingTime % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-      const minutes = Math.floor((remainingTime % (1000 * 60 * 60)) / (1000 * 60));
-      const seconds = Math.floor((remainingTime % (1000 * 60)) / 1000);
-  
-      // Update the HTML elements with the countdown values
-      daysElement.textContent = formatTime(days);
-      hoursElement.textContent = formatTime(hours);
-      minutesElement.textContent = formatTime(minutes);
-      secondsElement.textContent = formatTime(seconds);
-    }
-  
-    // Function to format the time values with leading zeros
-    function formatTime(time) {
-      return time < 10 ? `0${time}` : time;
-    }
-  
-    // Update the countdown initially
-    updateCountdown();
-  
-    // Update the countdown every second
-    setInterval(updateCountdown, 1000);
-  </script>
 <!-- MDB -->
 <script
   type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"
 ></script>
+{% compress js %}
+
+
 <!-- jQuery Plugins -->
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -81,3 +16,5 @@
 <script src="{% static 'js/nouislider.min.js' %}"></script>
 <script src="{% static 'js/jquery.zoom.min.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
+
+{% endcompress %}
