--- a/static_in_env/css/style.css
+++ b/static_in_env/css/style.css
@@ -566,11 +566,16 @@ textarea.input {
   display: none;
 }
 
+.cart2 {
+  border-bottom: 3px solid #008080;
+}
+
 .cart {
   margin-top: 8%;
   margin-left: 5%;
   margin-right: 10%;
   margin-bottom: 10%;
+  /* border-bottom: 3px solid #008080; */
   
   /* text-align: center; */
   /* position: absolute;
@@ -900,7 +905,9 @@ textarea.input {
 /*----------------------------*\
 	product
 \*----------------------------*/
-
+.related_products {
+  border-bottom: 3px solid #008080;
+}
 .product {
   position: relative;
   margin: 15px 0px;
@@ -1066,7 +1073,7 @@ textarea.input {
 .product .product-body .product-btns>button:hover {
   background-color: #E4E7ED;
   color: #008080;
-  border-radius: 50%;
+  /* border-radius: 50%; */
 }
 
 .product .product-body .product-btns>button .tooltipp {
@@ -1103,12 +1110,12 @@ textarea.input {
   left: 1px;
   right: 1px;
   bottom: 1px;
-  padding: 15px;
+  /* padding: 15px; */
   /* background: #1e1f29; */
   text-align: center;
-  background-color: #FFF;
+  /* background-color: #008080; */
   color: #008080;
-  border-color: #008080;
+  /* border-color: #008080; */
   /* -webkit-transform: translateY(0%);
   -ms-transform: translateY(0%);
   transform: translateY(0%);
@@ -1513,13 +1520,18 @@ textarea.input {
   background-color: #FFF;
 }
 
-#product-imgs .product-preview {
+#product-imgs .product-preview img{
+  max-height: 75px !important;
+}
+
+#product-imgs .product-preview{
   margin: 0px 5px;
-  border: 1px solid #E4E7ED;
+  border: 1px solid #008080;
 }
 
 #product-imgs .product-preview.slick-current {
   border-color: #008080;
+  /* max-height: 65px !important; */
 }
 
 #product-imgs .slick-prev {
@@ -1545,6 +1557,7 @@ textarea.input {
 #product-imgs .slick-next:before {
   content: "\f107";
 }
+
 
 .product-preview img {
   width: 100%;
@@ -2432,6 +2445,156 @@ input[type="submit"]:active {
   margin: 15px 0px;
 }
 
+/* Wishlist */
+.cart-wrap {
+	padding: 40px 0;
+  border-bottom: 3px solid #008080;
+	/* font-family: 'Open Sans', sans-serif; */
+}
+.main-heading {
+	font-size: 19px;
+	margin-bottom: 20px;
+}
+
+.table-wishlist th,
+.table-wishlist td {
+  border: none !important;
+}
+
+.table-wishlist table {
+    width: 100%;
+    border: none !important;
+}
+.table-wishlist thead {
+    border-bottom: 1px solid #e5e5e5;
+    margin-bottom: 5px;
+}
+.table-wishlist thead tr th {
+    padding: 8px 0 18px;
+    color: #484848;
+    font-size: 15px;
+    font-weight: 400;
+}
+.table-wishlist tr td {
+    padding: 25px 0;
+    vertical-align: middle;
+}
+.table-wishlist tr td .img-product {
+    width: 72px;
+    float: left;
+    margin-left: 8px;
+    margin-right: 31px;
+    line-height: 63px;
+}
+.table-wishlist tr td .img-product img {
+	width: 100%;
+}
+.table-wishlist tr td .name-product {
+    font-size: 15px;
+    color: #484848;
+    padding-top: 8px;
+    line-height: 24px;
+    width: 50%;
+}
+.table-wishlist tr td.price {
+    font-weight: 600;
+}
+.table-wishlist tr td .quanlity {
+    position: relative;
+}
+
+.total {
+	font-size: 24px;
+	font-weight: 600;
+	color: #8660e9;
+}
+.display-flex {
+	display: flex;
+}
+.align-center {
+	align-items: center;
+}
+.round-black-btn {
+	border-radius: 25px;
+    background: #212529;
+    color: #fff;
+    padding: 5px 20px;
+    display: inline-block;
+    border: solid 2px #212529; 
+    transition: all 0.5s ease-in-out 0s;
+    cursor: pointer;
+    font-size: 14px;
+}
+.round-black-btn:hover,
+.round-black-btn:focus {
+	background: transparent;
+	color: #212529;
+	text-decoration: none;
+}
+.mb-10 {
+    margin-bottom: 10px !important;
+}
+.mt-30 {
+    margin-top: 30px !important;
+}
+.d-block {
+    display: block;
+}
+.custom-form label {
+    font-size: 14px;
+    line-height: 14px;
+}
+.pretty.p-default {
+    margin-bottom: 15px;
+}
+.pretty input:checked~.state.p-primary-o label:before, 
+.pretty.p-toggle .state.p-primary-o label:before {
+    border-color: #8660e9;
+}
+.pretty.p-default:not(.p-fill) input:checked~.state.p-primary-o label:after {
+    background-color: #8660e9 !important;
+}
+.main-heading.border-b {
+    border-bottom: solid 1px #ededed;
+    padding-bottom: 15px;
+    margin-bottom: 20px !important;
+}
+.custom-form .pretty .state label {
+    padding-left: 6px;
+}
+.custom-form .pretty .state label:before {
+    top: 1px;
+}
+.custom-form .pretty .state label:after {
+    top: 1px;
+}
+.custom-form .form-control {
+    font-size: 14px;
+    height: 38px;
+}
+.custom-form .form-control:focus {
+    box-shadow: none;
+}
+.custom-form textarea.form-control {
+    height: auto;
+}
+.mt-40 {
+    margin-top: 40px !important; 
+}
+.in-stock-box {
+	background: #ff0000;
+	font-size: 12px;
+	text-align: center;
+	border-radius: 25px;
+	padding: 4px 15px;
+	display: inline-block;  
+    color: #fff;
+}
+.trash-icon {
+    font-size: 20px;
+    color: #212529;
+}
+
 /*=========================================================
 	13 -> RESPONSIVE
 ===========================================================*/
@@ -2481,6 +2644,7 @@ input[type="submit"]:active {
   [class*='col-xs'] {
     width: 100%;
   }
+  
   .store-grid {
     float: none;
     margin-top: 10px;
