--- a/store/templates/store/footer.html
+++ b/store/templates/store/footer.html
@@ -24,11 +24,11 @@
                     <div class="footer">
                         <h3 class="footer-title">Categories</h3>
                         <ul class="footer-links">
-                            <li><a href="#">Hot deals</a></li>
-                            <li><a href="#">Laptops</a></li>
-                            <li><a href="#">Smartphones</a></li>
-                            <li><a href="#">Cameras</a></li>
-                            <li><a href="#">Accessories</a></li>
+                            <li><a href="/">Hot deals</a></li>
+                            <li><a href="/">Laptops</a></li>
+                            <li><a href="/">Smartphones</a></li>
+                            <li><a href="/">Cameras</a></li>
+                            <li><a href="/">Accessories</a></li>
                         </ul>
                     </div>
                 </div>
@@ -39,11 +39,11 @@
                     <div class="footer">
                         <h3 class="footer-title">Information</h3>
                         <ul class="footer-links">
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Orders and Returns</a></li>
-                            <li><a href="#">Terms & Conditions</a></li>
+                            <li><a href="/">About Us</a></li>
+                            <li><a href="/">Contact Us</a></li>
+                            <li><a href="/">Privacy Policy</a></li>
+                            <li><a href="/">Orders and Returns</a></li>
+                            <li><a href="/">Terms & Conditions</a></li>
                         </ul>
                     </div>
                 </div>
