--- a/store/templates/store/shop-banner.html
+++ b/store/templates/store/shop-banner.html
@@ -10,7 +10,7 @@
             <div class="col-md-4 col-xs-6">
                 <div class="shop">
                     <div class="shop-img">
-                        <img src="{% static 'img/shop02.png' %}" alt="">
+                        <img width="250" height="200" src="{% static 'img/shop02.png' %}" alt="">
                     </div>
                     <div class="shop-body">
                         <h3>Repair<br>Packages</h3>
@@ -24,7 +24,7 @@
             <div class="col-md-4 col-xs-6">
                 <div class="shop">
                     <div class="shop-img">
-                        <img src="{% static 'img/shop01.png' %}" alt="">
+                        <img width="250" height="200" src="{% static 'img/shop01.png' %}" alt="">
                     </div>
                     <div class="shop-body">
                         <h3>Repair<br>Guide</h3>
@@ -38,7 +38,7 @@
             <div class="col-md-4 col-xs-6">
                 <div class="shop">
                     <div class="shop-img">
-                        <img src="{% static 'img/shop03.png' %}" alt="">
+                        <img width="250" height="200" src="{% static 'img/shop03.png' %}" alt="">
                     </div>
                     <div class="shop-body">
                         <h3>Accessories<br>Collection</h3>
