--- a/static_in_env/css/style.css
+++ b/static_in_env/css/style.css
@@ -2137,6 +2137,7 @@ textarea.input {
   gap: 2px;
   flex-wrap: wrap;
   overflow: hidden;
+  background: #222;
 }
 
 .login::before {
@@ -2144,32 +2145,6 @@ textarea.input {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#000, #008080, #000);
-  animation: animate 5s linear infinite;
-}
-
-@keyframes animate {
-  0% {
-    transform: translateY(-100%);
-  }
-  100% {
-    transform: translateY(100%);
-  }
-}
-
-.login span {
-  position: relative;
-  display: block;
-  width: calc(6.25vw - 2px);
-  height: calc(6.25vw - 2px);
-  background: #181818;
-  z-index: 2;
-  transition: 1.5s;
-}
-
-.login span:hover {
-  background: #008080;
-  transition: 0s;
 }
 
 .login .signin {
@@ -2182,7 +2157,7 @@ textarea.input {
   align-items: center;
   padding: 40px;
   border-radius: 4px;
-  box-shadow: 0 15px 35px rgba(0, 0, 0, 9);
+  /* box-shadow: 0 15px 35px rgba(0, 0, 0, 9); */
 }
 
 .login .signin .content {
