--- a/store/templates/store/head.html
+++ b/store/templates/store/head.html
@@ -8,6 +8,9 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
   <title>Kenstech Support</title>
+
+    <!-- Include Paystack JavaScript library -->
+  <script src="https://js.paystack.co/v1/inline.js"></script>
   <!-- Font Awesome -->
   <link
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -93,4 +96,5 @@ rel="stylesheet"
 
   <link rel="icon" type="image/x-icon" href="{% static 'img/logo2.png' %}" />
   {% endcompress %}
+
 </head>
