--- a/store/templates/store/script.html
+++ b/store/templates/store/script.html
@@ -10,11 +10,11 @@
 
 
 <!-- jQuery Plugins -->
-<script src="{% static 'js/jquery.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/slick.min.js' %}"></script>
-<script src="{% static 'js/nouislider.min.js' %}"></script>
-<script src="{% static 'js/jquery.zoom.min.js' %}"></script>
-<script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/jquery.min.js' %}?v={{ STATIC_VERSION }}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}?v={{ STATIC_VERSION }}"></script>
+<script src="{% static 'js/slick.min.js' %}?v={{ STATIC_VERSION }}"></script>
+<script src="{% static 'js/nouislider.min.js' %}?v={{ STATIC_VERSION }}"></script>
+<script src="{% static 'js/jquery.zoom.min.js' %}?v={{ STATIC_VERSION }}"></script>
+<script src="{% static 'js/main.js' %}?v={{ STATIC_VERSION }}"></script>
 
 {% endcompress %}
